2006-01-31    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* cmpidt.h, cmpift.h:
	Fixed 1420604: CMPI header files were not CMPI 1.0 compliant.

	* getSchema.sh.pre.in: 
	Fixed 1420399: getSchema.sh can be customized to deal with
	different CIM Schema versions now. Default is still 2.9.0.

2006-01-30  a3schuur

	* objectImpl.h, objectImplSwapI32toP32.c, sfcbdumpP32onI32.c:
	[1408327] sfcbmof does not support big/little endian in
	cross-compile readjusting ClProperty - removing 8 bytes of filler.

2006-01-27  a3schuur

	* objectImplSwapI32toP32.c: [ 1408327 ] sfcbmof does not support
	big/little endian in cross-compile sectionOffsets not set when
	section is empty.  arrayBufferOffset and strBufOffset not cleared
	when buffer empty.

2006-01-26  mihajlov

	* Makefile.am: Fixed make distcheck problem, syntax error in
	Makefile.am.

2006-01-26  mihajlov

	* man/sfcbrepos.1.pre.in, man/sfcbstage.1.pre.in,
	man/sfcbunstage.1.pre.in: [ 1408327 ] sfcbmof does not support
	big/little endian in cross-compile.  Updated man pages.

2006-01-26  mihajlov

	* mofc/mofparse.c: Enhancement: allow multiple backend options to
	be specified.

2006-01-26  mihajlov

	* sfcbdumpP32onI32.c: Minor: fixed incorrect parameter passing.

2006-01-26  mihajlov

	* sfcbdump.c, sfcbdumpP32onI32.c: Minor: removed compile warning.

2006-01-26  mihajlov

	* providerDrv.c: Minor: added helper variable for debugging.

2006-01-26    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* sfcbstage.sh.in, sfcbunstage.sh.in, sfcbrepos.sh.in: 
	Support for 1408327. Added cross compile flag to sfcbrepos and
	DESTDIR evaluation for all the shell scripts.

	* configure.ac, Makefile.am: 
	Fixed 1414767. VPATH build failure after CVS checkout. Improved
	xFLAGS processing.

2006-01-25  a3schuur

	* sfcbdumpP32onI32.c: SFCB Repository Dump Program for Power32
	classSchemas file on Intel32

2006-01-24  a3schuur

	* objectImpl.h, objectImplSwapI32toP32.c: [ 1408327 ] sfcbmof does